tests/machine/x/ts/append_builtin.ts
let a = [1, 2];
console.log(append(a, 3));
